--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,14 +6,8 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
-    "**/.classpath": true,
-    "**/.project": true,
-    "**/.settings": true,
-    "**/.factorypath": true,
-    "**/node_modules": true,
-    "node_modules": true,
-    "**/.vscode": true,
-    ".vscode": true
+    "**/*.git": true
   },
-  "explorerExclude.backup": {}
+  "explorerExclude.backup": {},
+  "cSpell.enableFiletypes": ["!javascript"]
 }
